--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+  <head>
+    <style>
+      body {
+        background-color: #1a1a1a;
+      }
+    </style>
+  </head>
     <body>
         <script src="main.js" type="text/javascript"></script>
     </body>
